--- a/src/app/category/category-page/category-page.component.html
+++ b/src/app/category/category-page/category-page.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let category of categories">
-  <div class="card border-dark mb-3" style="max-width: 18rem;">
+  <div class="card border-dark mb-3 max-width">
     <div class="card-header">{{category.id}}</div>
     <div class="card-body text-dark">
       <h5 class="card-title">{{category.title}}</h5>
