--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <img src="assets/images/logo.png" width="140px" heigth="70px">
+    <img src="assets/images/logo.png" width="140px">
       <div class="navbar-nav">
         <a class="nav-link" routerLink="landing-page">Landing</a>
         <a class="nav-link" routerLink="category-page">Category</a>
-        
+        <a class="nav-link" routerLink="course-page">Courses</a>
       </div>
   </div>
 </nav>
