--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -17,3 +17,9 @@
     text-align: center;
     margin-top:30%;
 }
+.image1{
+    width: 40%;
+    float:left;
+    border-radius:50px;
+    margin-right:3%;
+}
