landing page improved

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div id="container">
 <div id="content">
 <img src="assets/images/inqoo-image.png" class="image1">
-<b style="font-size:25px">INQOO – Innowacyjne Szkolenia Programistyczne</b><br>
+<b class="strong1">INQOO – Innowacyjne Szkolenia Programistyczne</b><br>
 INQOO, to innowacyjna droga do zdobycia zawodu w branży IT, będąca przedsionkiem kariery dla przyszłych programistów.
 Oferujemy pełne szkolenia programistyczne, dając jednocześnie możliwość wejścia do nowoczesnego, dobrze zaprojektowanego świata. INQOO kreuje model funkcjonowania szkoły IT +, opierając się na tworzeniu pomysłów, koncepcji, działań, zespołu i Twojej przyszłości.
 </div>
