added margin to Course page

--- a/src/app/course/course-page/course-page.component.html
+++ b/src/app/course/course-page/course-page.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let course of courses">
-  <div class="card border-dark mb-3 max width">
+  <div class="card border-dark mb-3 max width margin">
     <div class="card-header">{{course.id}}</div>
     <div class="card-body text-dark">
       <h5 class="card-title">{{course.title}}</h5>
