added lecture interface,service and page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
         <a class="nav-link" routerLink="landing-page">Landing</a>
         <a class="nav-link" routerLink="category-page">Category</a>
         <a class="nav-link" routerLink="course-page">Courses</a>
+        <a class="nav-link" routerLink="lecture-page">Lectures</a>
       </div>
   </div>
 </nav>
