--- a/src/app/category/category-page/category-page.component.html
+++ b/src/app/category/category-page/category-page.component.html
@@ -1,11 +1,23 @@
-<div class="col">
+<!--<div class="col">
   <div class="row">
     <div *ngFor="let category of categories" class="col-6 row justify-content-around center">
-      <div class="card border-dark mb-3 max-width">
-        <div class="card-header">{{category.id}}</div>
+      <div class="card border-dark mb-3 max-width ">
+        <div class="card-header"><h4>{{category.title}}</h4></div>
         <div class="card-body text-dark">
-          <h5 class="card-title">{{category.title}}</h5>
           <p class="card-text">{{category.description}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>-->
+
+<div class="col">
+  <div class="row">
+    <div *ngFor="let category of categories" class="col-4 row justify-content-around center">
+      <div class="card border-dark mb-3 max-width" >
+        <div class="card-header2"><h2><b>{{category.title}}</b></h2></div>
+        <div class="card-body text-dark">
+          <p class="card-text"><i>{{category.description}}</i></p>
         </div>
       </div>
     </div>
