--- a/src/app/course/course-page/course-page.component.html
+++ b/src/app/course/course-page/course-page.component.html
@@ -1,10 +1,10 @@
-<div *ngFor="let course of courses">
-  <div class="card border-dark mb-3 max width margin">
-    <div class="card-header">{{course.id}}</div>
-    <div class="card-body text-dark">
-      <h5 class="card-title">{{course.title}}</h5>
-      <p class="card-text">{{course.description}}</p>
+<div class="box">
+  <div *ngFor="let course of courses">
+    <div class="card border-dark mb-3 max width margin">
+      <div class="card-body text-dark">
+        <h4 class="card-title">{{ course.title }}</h4>
+        <p class="card-text">{{ course.description }}</p>
+      </div>
     </div>
   </div>
 </div>
-
