--- a/src/app/lecture/lecture-page/lecture-page.component.css
+++ b/src/app/lecture/lecture-page/lecture-page.component.css
@@ -2,6 +2,23 @@
   max-width: 18rem;
 }
 
-.margin{
+.center {
   margin-top: 30px;
+}
+
+.card-header2{
+  text-align: center;
+  font-family:"Lucida Handwriting", monospace;
+  padding-top: 7%;
+}
+.card{
+  border:1px solid lightgray;
+  border-radius:25px;
+  background-color: rgba(255, 255, 255, 0.774);
+}
+.card-text{
+  text-align: justify;
+}
+.box{
+  margin:3% 5% 0% 5%;
 }
