--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -1,10 +1,11 @@
-<div *ngFor="let lecture of lectures">
-  <div class="card border-dark mb-3 max width margin">
-    <div class="card-header">{{lecture.id}}</div>
-    <div class="card-body text-dark">
-      <h5 class="card-title">{{lecture.title}}</h5>
-      <p class="card-text">{{lecture.description}}</p>
-      <p class="card-text">Price: {{lecture.price}}</p>
+<div class="box">
+  <div *ngFor="let lecture of lectures">
+    <div class="card border-dark mb-3 max width margin">
+      <div class="card-body text-dark">
+        <h4 class="card-title"><i>{{ lecture.title }}</i></h4>
+        <p class="card-text"><i>{{ lecture.description }}</i></p>
+        <p class="card-text"><i>Price: {{ lecture.price }}<br>Duration:</i></p>
+      </div>
     </div>
   </div>
 </div>
