--- a/src/app/course/course-page/course-page.component.html
+++ b/src/app/course/course-page/course-page.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let course of courses">
     <div class="card border-dark mb-3 max width margin">
       <div class="card-body text-dark">
-        <h4 class="card-title">{{ course.title }}</h4>
+        <h4 (click)="goToLectures()" class="card-title">{{ course.title }}</h4>
         <p class="card-text">{{ course.description }}</p>
       </div>
     </div>
