--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,6 +1,5 @@
 #container{
-    width:94%;
-    margin:3% 3% 3% 3%;
+    width:100%;
     padding:2%;
     color: rgb(60,60,60);
     background-color: rgba(255, 255, 255, 0.674);
@@ -24,5 +23,37 @@
     margin-right:3%;
 }
 .strong1{
-    font-size:25px;
+    size: 500px;
+    text-align: right;
+}
+.koxtotalny{
+    letter-spacing: 1.5px;
+    
+}
+.image2{
+    width: 40%;
+    float:right;
+    border-radius:50px;
+    margin-right:3%;
+}
+.smallImage{
+    width: 55%;
+    float:right;
+    border-radius:50px;
+    margin-right:3%;
+}
+.smallImage1{
+    width: 40%;
+    float:right;
+    border-radius:50px;
+    margin-right:3%;
+}
+.smallImage2{
+    width: 35%;
+    float:left;
+    border-radius:50px;
+    margin-right:3%;
+}
+.content{
+    float:left;
 }
