--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,7 @@
         <a class="nav-link" routerLink="category-page">Category</a>
         <a class="nav-link" routerLink="course-page">Courses</a>
         <a class="nav-link" routerLink="lecture-page">Lectures</a>
+        <a class="nav-link" routerLink="summary-page">Summary</a>
       </div>
   </div>
 </nav>
