improved description of texts at landing page .

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,8 +3,7 @@
         <img src="assets/images/grafikaszkoleniowa.png" class="leftImage">
         <h3><strong> Kim jesteśmy?</strong></h3>
         <div class="content1">INQOO, to innowacyjna droga do zdobycia zawodu w branży IT, będąca przedsionkiem kariery dla przyszłych programistów.
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-        </div>
+            Szkolenia oraz produkty rozwojowe wspierające określone cele edukacyjne muszą być skuteczne – ta myśl towarzyszy nam podczas pracy i wyznacza sposób w jaki działamy. Robimy wszystko aby szkolenia odpowiadały na aktualne potrzeby Klientów i pozwalały im zamienić się w konkretne korzyści biznesowe.Naszą ambicją jest bycie bliskim partnerem naszych Klientów, dlatego jako firma szkoleniowa.Misją  którą sobie wyznaczyliśmy  jest przekazywanie wiedzy w przystępny i dostępny, inspirujący oraz profesjonalny sposób.        </div>
         
     </div>
 
@@ -13,8 +12,7 @@
         <h3><strong>Z nami łatwo zdobędziesz wymarzone stanowisko pracy!!!!</strong></h3>
         <div  class="content1">
             <img src ="assets/images/grafikawartości.png" class="smallerImage">
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-        </div>
+            Każdy kto był kiedyś w młodym wieku miał marzenie kim chciałby zostać jak dorośnie niektórzy chcieli być astronautami inni policjantami a jeszcze inni chcieli być lekarzami moglibyśmy wymieniać tak niezliczona ilość razy z nami jako firmą szkoleniową zapewniającą szkolenia programistyczne możemy wam pomóc spełnić wasze marzenie obalając mit że nie każdy może być programistą i pomóc wam rozwinąć skrzydła w drodze do spełnienia marzeń. Pomożemy wam znaleźć twoja idealną, wymarzona prace w branży IT.         </div>
     </div>
 
     
@@ -22,24 +20,21 @@
         <img src =" assets/images/kasa.png"     class="leftImage">
         <h3><strong> Zacznij zarabiać!!</strong></h3>
         <div  class="content1">
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-        </div>
+            Rynek pracy staje się rynkiem pracownika, a na obowiązującym rynku Polskim a także zagranicznym Zapotrzebowanie na Full-Stack Developerów stale rośnie, więc staniesz się interesującym kandydatem dla potencjalnego pracodawcy.  Co za tym idzie programiści zarabiają nie małe, ponadprzeciętne pieniądze, dla przykładu Jako Full-Stack Developer będziesz mógł liczyć na zarobki 10 000 – 15 000 zł miesięcznie.        </div>
     </div>
      
         <div class="content">
             <h3><strong>Szanuj swój czas!</strong></h3>
             <div  class="content1">
                 <img src="assets/images/czas.png" class="smallImage" >
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-            </div>
+                W dzisiejszych dynamicznych, zabieganych czasach wszystko dzieje się niezwykle szybko, aby za tym nadążyć musimy działać na najwyższych obrotach dlatego nie trać swojego czasu i zainwestuj go w swoją przyszłość razem z nami. Wolimy działać od razu, więc dajemy od siebie aż 380 godzin w których zajmiemy się twoim rozwojem a także rozwinięciem twoich kompetencji tak żebyś nie miał problemu z znalezieniem pracy jako junior Full-Stack Developer. Pamiętaj że inwestycje w swoją przyszłość to nie  jest strata czasu!            </div>
         </div>
         
         <div class="content">
             <img src="assets/images/rozwój.png" class="theSmallestImage" >
             <h3><strong>Postaw na rozwój!!!</strong></h3>
             <div  class="content1">
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-            </div>
+                Nie czekaj tylko postaw na swój rozwój. Dołącz do nas pomożemy ci się rozwinąć w branży IT jako Full-Stack Developer. Możesz rozwinąć swoje umiejętności w IT od podstaw, aż do poziomu eksperta. Nauczysz się rozwiązywania samodzielnego myślenia a także rozwiązywania problemów. Droga od Juniora do Seniora nigdy nie była tak blisko na wyciągnięcie ręki.            </div>
         </div>
       
 <hr>
