--- a/src/app/category/category-page/category-page.component.css
+++ b/src/app/category/category-page/category-page.component.css
@@ -12,12 +12,14 @@
   padding-top: 7%;
 }
 .card{
-  border:1px solid lightgray;
-  border-radius:25px;
   background-color: rgba(255, 255, 255, 0.774);
+  border-radius:25px;
+  border:2px solid black;
+}
+.card:hover{
+  border:dashed;
 }
 .card-text{
   text-align: justify;
 }
-
 
