--- a/src/app/lecture/lecture-page/lecture-page.component.css
+++ b/src/app/lecture/lecture-page/lecture-page.component.css
@@ -13,7 +13,7 @@
 }
 
 .card {
-  border: 2px solid lightgray;
+  border: 0.2rem solid lightgray;
   border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.774);
 }
