--- a/src/app/category/category-page/category-page.component.css
+++ b/src/app/category/category-page/category-page.component.css
@@ -14,7 +14,7 @@
 .card{
   background-color: rgba(255, 255, 255, 0.774);
   border-radius:25px;
-  border:2px solid black;
+  border:0.2rem solid black;
 }
 .card:hover{
   border:dashed;
