--- a/src/app/course/course-page/course-page.component.css
+++ b/src/app/course/course-page/course-page.component.css
@@ -12,7 +12,7 @@
   padding-top: 7%;
 }
 .card{
-  border:2px solid lightgray;
+  border:0.2rem solid lightgray;
   border-radius:25px;
   background-color: rgba(255, 255, 255, 0.774);
 }
