--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,43 +1,46 @@
 <div id="container">
     <div id="content">
+        <div>
         <img src="assets/images/grafikaszkoleniowa.png" class="leftImage">
-        <h3><strong> Kim jesteśmy?</strong></h3>
-        <div class="content1">INQOO, to innowacyjna droga do zdobycia zawodu w branży IT, będąca przedsionkiem kariery dla przyszłych programistów.
+        </div>  
+        <div class="content1">
+            <h3><strong> Kim jesteśmy?</strong></h3>
+            INQOO, to innowacyjna droga do zdobycia zawodu w branży IT, będąca przedsionkiem kariery dla przyszłych programistów.
             Szkolenia oraz produkty rozwojowe wspierające określone cele edukacyjne muszą być skuteczne – ta myśl towarzyszy nam podczas pracy i wyznacza sposób w jaki działamy. Robimy wszystko aby szkolenia odpowiadały na aktualne potrzeby Klientów i pozwalały im zamienić się w konkretne korzyści biznesowe.Naszą ambicją jest bycie bliskim partnerem naszych Klientów, dlatego jako firma szkoleniowa.Misją  którą sobie wyznaczyliśmy  jest przekazywanie wiedzy w przystępny i dostępny, inspirujący oraz profesjonalny sposób.        </div>
         
     </div>
 
         
     <div class="content">
-        <h3><strong>Z nami łatwo zdobędziesz wymarzone stanowisko pracy!!!!</strong></h3>
         <div  class="content1">
             <img src ="assets/images/grafikawartości.png" class="smallerImage">
-            Każdy kto był kiedyś w młodym wieku miał marzenie kim chciałby zostać jak dorośnie niektórzy chcieli być astronautami inni policjantami a jeszcze inni chcieli być lekarzami moglibyśmy wymieniać tak niezliczona ilość razy z nami jako firmą szkoleniową zapewniającą szkolenia programistyczne możemy wam pomóc spełnić wasze marzenie obalając mit że nie każdy może być programistą i pomóc wam rozwinąć skrzydła w drodze do spełnienia marzeń. Pomożemy wam znaleźć twoja idealną, wymarzona prace w branży IT.         </div>
+            <h3><strong>Z nami łatwo zdobędziesz wymarzone stanowisko pracy!!!!</strong></h3>
+            Każdy kto był kiedyś w młodym wieku miał marzenie kim chciałby zostać jak dorośnie niektórzy chcieli być astronautami inni policjantami a jeszcze inni chcieli być lekarzami moglibyśmy wymieniać tak niezliczona ilość razy z nami jako firmą szkoleniową zapewniającą szkolenia programistyczne możemy wam pomóc spełnić wasze marzenie obalając mit że nie każdy może być programistą i pomóc wam rozwinąć skrzydła w drodze do spełnienia marzeń. Pomożemy wam znaleźć waszą idealną, wymarzoną prace w branży IT.         </div>
     </div>
 
     
     <div class="content">
         <img src =" assets/images/kasa.png"     class="leftImage">
-        <h3><strong> Zacznij zarabiać!!</strong></h3>
         <div  class="content1">
+            <h3><strong> Zacznij zarabiać!!</strong></h3>
             Rynek pracy staje się rynkiem pracownika, a na obowiązującym rynku Polskim a także zagranicznym Zapotrzebowanie na Full-Stack Developerów stale rośnie, więc staniesz się interesującym kandydatem dla potencjalnego pracodawcy.  Co za tym idzie programiści zarabiają nie małe, ponadprzeciętne pieniądze, dla przykładu Jako Full-Stack Developer będziesz mógł liczyć na zarobki 10 000 – 15 000 zł miesięcznie.        </div>
     </div>
      
         <div class="content">
-            <h3><strong>Szanuj swój czas!</strong></h3>
             <div  class="content1">
-                <img src="assets/images/czas.png" class="smallImage" >
+                <img src="assets/images/czas.png" class="smallImage">
+                <h3><strong>Szanuj swój czas!</strong></h3>
                 W dzisiejszych dynamicznych, zabieganych czasach wszystko dzieje się niezwykle szybko, aby za tym nadążyć musimy działać na najwyższych obrotach dlatego nie trać swojego czasu i zainwestuj go w swoją przyszłość razem z nami. Wolimy działać od razu, więc dajemy od siebie aż 380 godzin w których zajmiemy się twoim rozwojem a także rozwinięciem twoich kompetencji tak żebyś nie miał problemu z znalezieniem pracy jako junior Full-Stack Developer. Pamiętaj że inwestycje w swoją przyszłość to nie  jest strata czasu!            </div>
         </div>
         
         <div class="content">
-            <img src="assets/images/rozwój.png" class="theSmallestImage" >
-            <h3><strong>Postaw na rozwój!!!</strong></h3>
+            <div>
+            <img src="assets/images/rozwój.png" class="theSmallestImage">
+            </div>
             <div  class="content1">
+                <h3><strong>Postaw na rozwój!!!</strong></h3>
                 Nie czekaj tylko postaw na swój rozwój. Dołącz do nas pomożemy ci się rozwinąć w branży IT jako Full-Stack Developer. Możesz rozwinąć swoje umiejętności w IT od podstaw, aż do poziomu eksperta. Nauczysz się rozwiązywania samodzielnego myślenia a także rozwiązywania problemów. Droga od Juniora do Seniora nigdy nie była tak blisko na wyciągnięcie ręki.            </div>
         </div>
-      
-<hr>
 
         <div id="footer">
         <b>E-mail:</b> anna.kania@inqoo.com
