--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,7 @@
     <img src="assets/images/logo.png" width="140px">
       <div class="navbar-nav">
         <a class="nav-link" routerLink="landing-page">Landing</a>
-        <a class="nav-link" routerLink="category-page">Category</a>
-        <a class="nav-link" routerLink="course-page">Courses</a>
-        <a class="nav-link" routerLink="lecture-page">Lectures</a>
+        <a class="nav-link" routerLink="category-page">Offer</a>
         <a class="nav-link" routerLink="summary-page">Summary</a>
       </div>
   </div>
