--- a/src/app/category/category-page/category-page.component.html
+++ b/src/app/category/category-page/category-page.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div *ngFor="let category of categories" class="col-4 row justify-content-around center">
       <div class="card border-dark mb-3 max-width" >
-        <div class="card-header2" (click)="onCategorySelect(category.title)"><h2><b><i>{{category.title}}</i></b></h2></div>
+        <div [routerLink]="['/course-page/', category.title]" class="card-header2"><h2><b><i>{{category.title}}</i></b>
+        </h2></div>
         <div class="card-body text-dark">
           <p class="card-text"><i>{{category.description}}</i></p>
         </div>
