--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,7 +1,9 @@
+@import "../../../palete.scss";
+
 #container{
     width:100%;
     padding:2%;
-    color: black;
+    color:$handsome;
     background-color: rgba(255, 255, 255, 0.15);
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
@@ -54,7 +56,7 @@
 .content{
     float:left;
 }
-.content1{
+.textContent{
     text-align:center;
     margin: 8%;
 }
