--- a/src/app/course/course-page/course-page.component.css
+++ b/src/app/course/course-page/course-page.component.css
@@ -17,7 +17,7 @@
   background-color: rgba(255, 255, 255, 0.774);
 }
 .card:hover{
-  border:dashed;
+  border:0.2rem dashed;
 }
 .card-text{
   text-align: justify;
