adding cursor pointer to logo that will take user to landing page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <img src="assets/images/logo.png" width="140px">
-      <div class="navbar-nav">
+    <img src="assets/images/logo.png" class="cursor" width="140px"[routerLink]="['/landing-page/']">
+      <div class="navbar-nav" >
         <a class="nav-link" routerLink="landing-page">Landing</a>
         <a class="nav-link" routerLink="category-page">Offer</a>
         <a class="nav-link" routerLink="summary-page">Summary</a>
