--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <img src="assets/images/logo.png" class="cursor" width="140px"[routerLink]="['/landing-page/']">
+    <img src="assets/images/logo.png" class="cursor" width="8,75rem"[routerLink]="['/landing-page/']">
       <div class="navbar-nav" >
         <a class="nav-link" routerLink="landing-page">Landing</a>
         <a class="nav-link" routerLink="category-page">Offer</a>
