Added hambur menu

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,9 @@
 .navbar-nav{
     color:black;
 }
-.navbar-collapse{
-    margin-left:1%;
+.logo{
+    margin-left: 1%;
+}
+.list{
+    margin-left: 2%;
 }
