--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <img src="assets/images/logo.png" width="140px">
-      <div class="navbar-nav">
+  <img src="assets/images/logo.png" class="logo" width="140px">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse list" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
         <a class="nav-link" routerLink="landing-page">Landing</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="category-page">Offer</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="summary-page">Summary</a>
-      </div>
+      </li>
+    </ul>
   </div>
 </nav>
 <router-outlet></router-outlet>
