--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <img src="assets/images/logo.png" class="logo" width="140px">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" (click)="collapse()">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse list" id="navbarNavDropdown">
+  <div class="collapse navbar-collapse list" id="navbarNavDropdown" [ngbCollapse]="isMenuCollapsed">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" routerLink="landing-page">Landing</a>
