you can now see the email you provided and lectures you picked on summary page

--- a/src/app/summary-page/summary-page.component.html
+++ b/src/app/summary-page/summary-page.component.html
@@ -1,32 +1,21 @@
 <div id="container">
-    <h2><strong>SUMMARY</strong></h2>
-    <div class="strongText">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-
+  <h2><strong>SUMMARY</strong></h2>
+  <div class="strongText">
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+    type specimen book.
+  </div>
+  <div>
+    <h3><strong>Wybrane kursy:</strong></h3>
+    <div class="content">
+      {{lecturesToDisplay}}
     </div>
-    <div >
-        <h3><strong>JS</strong></h3>
-        <div  class="content">
-            <img src="assets/images/bird.png" class="image" >
-            BASICS
-        </div>
+  </div>
+  <div class="strongText">
+    <h3><strong>Email został wysłany do {{emailToDisplay}}</strong></h3>
+    <div>
+      Serdecznie dziękujemy za zainteresowanie naszą ofertą, wkrótce się odezwiemy.
     </div>
-
-    <div >
-        <div  class="content">
-            <img src="assets/images/bird.png" class="image" >
-            REDUX        </div>
-    </div>
-         
-    <div  class="strongText">
-        <h3><strong>Został wysłany do anna.kania@inqoo.com</strong></h3>
-        <div>
-            Contrary to popular belief, Lorem Ipsum is not simply random text. 
-        </div>
-    </div>
-
-
-   
-         <img src="assets/images/like.png" class="smallImage" >
-
+  </div>
+  <img class="smallImage" src="assets/images/like.png">
 </div>
