--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -16,10 +16,12 @@
   <div class="emailForm">
     <label class="emailLabel" for="email">Email: </label>
     <input [formControl]="email" [placeholder]="'example@email.com'" class="emailInput" id="email" type="email">
-    <button (click)="onSubmit(checkedLectures,email.value)"
+    <button (click)="onSubmit(checkedLectures,email.value) "
             [disabled]="checkIfButtonShouldBeDisabled()"
             class="btn-primary buttonHeight"
+            [routerLink]="['/summary-page/']"
             type="button">Submit
+
     </button>
     <small *ngIf="checkIfEmailIsRequiredErrorShouldBeDisplayed()" class="text-danger">Email is required</small>
     <small *ngIf="email.errors?.pattern" class="text-danger">Email is invalid</small>
