--- a/src/app/category/category-page/category-page.component.css
+++ b/src/app/category/category-page/category-page.component.css
@@ -11,14 +11,18 @@
   font-family:"Lucida Handwriting", monospace;
   padding-top: 7%;
 }
+
 .card{
   background-color: rgba(255, 255, 255, 0.774);
   border-radius:25px;
   border:0.2rem solid black;
+  cursor: pointer;
 }
+
 .card:hover{
-  border:0.2rem dashed;
+  background-color: rgba(245, 245, 245, 0.774);
 }
+
 .card-text{
   text-align: justify;
 }
