--- a/src/app/lecture/lecture-page/lecture-page.component.css
+++ b/src/app/lecture/lecture-page/lecture-page.component.css
@@ -18,10 +18,6 @@
   background-color: rgba(255, 255, 255, 0.774);
 }
 
-.card:hover{
-  border:0.2rem dashed;
-}
-
 .card-text {
   text-align: justify;
 }
@@ -58,5 +54,13 @@
   margin-right: 0.25rem;
   height: 2.25rem;
   font-size: 1.1rem;
+}
+
+.checkmark {
+  margin-top:3rem;
+  margin-right:0.5rem;
+  height: 3.5rem;
+  width: 3.5rem;
+  float:left;
 }
 
