--- a/src/app/lecture/lecture-page/lecture-page.component.scss
+++ b/src/app/lecture/lecture-page/lecture-page.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../palete.scss";
+
 .max-width {
   max-width: 18rem;
 }
@@ -15,7 +17,7 @@
 .card {
   border: 0.2rem solid lightgray;
   border-radius: 25px;
-  background-color: rgba(255, 255, 255, 0.774);
+  background-color: rgba(white, 0.774);
 }
 
 .card-text {
