--- a/palete.scss
+++ b/palete.scss
@@ -1,2 +1,3 @@
 $handsome:#000000;
-$backgroundOnHover: #F5F5F5;
+$cardBackground: rgba(255,255,255,0.75);
+$cardBackgroundOnHover: rgba(245,245,245,0.75);
