--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,5 @@ body{
     background-image: url('assets/images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
