--- a/src/app/summary-page/summary-page.component.html
+++ b/src/app/summary-page/summary-page.component.html
@@ -1,21 +1,18 @@
 <div id="container">
-  <h2><strong>SUMMARY</strong></h2>
-  <div class="strongText">
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-    type specimen book.
-  </div>
+  <h1><strong>Podsumowanie</strong></h1>
+  <br>
   <div>
-    <h3><strong>Wybrane kursy:</strong></h3>
-    <div class="content">
-      {{lecturesToDisplay}}
+    <h2>Wybrane kursy:</h2>
+    <div *ngFor="let lecture of lecturesToDisplay" class="content">
+      <h4><strong>{{lecture}}</strong></h4>
     </div>
   </div>
-  <div class="strongText">
-    <h3><strong>Email został wysłany do {{emailToDisplay}}</strong></h3>
-    <div>
-      Serdecznie dziękujemy za zainteresowanie naszą ofertą, wkrótce się odezwiemy.
-    </div>
+  <br>
+  <div>
+    <h3>Email został wysłany do <strong>{{emailToDisplay}}</strong></h3>
+    <h3>Serdecznie dziękujemy za zainteresowanie naszą ofertą, wkrótce się odezwiemy.</h3>
   </div>
-  <img class="smallImage" src="assets/images/like.png">
+  <button [routerLink]="['/landing-page']" class="btn btn-primary" type="button">
+    Powrót do strony głównej
+  </button>
 </div>
