--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,14 +5,8 @@
   </button>
   <div class="collapse navbar-collapse list" id="navbarNavDropdown" [ngbCollapse]="isMenuCollapsed">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="landing-page">Landing</a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="category-page">Offer</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="summary-page">Summary</a>
+        <a class="nav-link" routerLink="category-page">Oferty</a>
       </li>
     </ul>
   </div>
