--- a/src/app/summary-page/summary-page.component.css
+++ b/src/app/summary-page/summary-page.component.css
@@ -1,6 +1,6 @@
 #container{
     width:100%;
-    height: 50rem;
+    min-height:32.6rem;
     padding:5%;
     color: rgb(60,60,60);
     background-color: rgba(255, 255, 255, 0.674);
