--- a/src/app/category/category-page/category-page.component.html
+++ b/src/app/category/category-page/category-page.component.html
@@ -2,10 +2,8 @@
   <div class="row">
     <div *ngFor="let category of categories" class="col-4 row justify-content-around center">
       <div class="card border-dark mb-3 max-width" [routerLink]="['/course-page/', category.title]">
-        <div class="card-header2"><h2>
-          <b><i>{{category.title}}</i></b></h2></div>
-        <div class="card-body text-dark">
-          <p class="card-text"><i>{{category.description}}</i></p>
+        <div class="card-header2">
+          <h1><b><i>{{category.title}}</i></b></h1>
         </div>
       </div>
     </div>
