--- a/src/app/category/category-page/category-page.component.html
+++ b/src/app/category/category-page/category-page.component.html
@@ -1,9 +1,9 @@
 <div class="col">
   <div class="row">
-    <div *ngFor="let category of categories" class="col-4 row justify-content-around center">
+    <div *ngFor="let category of categories" class="col-6 row justify-content-center center">
       <div class="card border-dark mb-3 max-width" [routerLink]="['/course-page/', category.title]">
         <div class="card-header2">
-          <h1><b><i>{{category.title}}</i></b></h1>
+          <b><i>{{category.title}}</i></b>
         </div>
       </div>
     </div>
