--- a/palete.scss
+++ b/palete.scss
@@ -1,2 +1,3 @@
-$cardBackground: rgba(255,255,255,0.75);
-$cardBackgroundOnHover: rgba(245,245,245,0.75);
+$cardBackground: rgba(255, 255, 255, 0.75);
+$cardBackgroundOnHover: rgba(245, 245, 245, 0.75);
+$inqooBlue: #1f37e4;
