--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <img src="assets/images/logo.png" class="cursor logo" [routerLink]="['/landing-page/']">
-  <button (click)="collapse()" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
-          class="navbar-toggler navbar-dark" data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
+  <button (click)="collapse()"
+          class="navbar-toggler navbar-dark" type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse list" id="navbarNavDropdown" [ngbCollapse]="isMenuCollapsed">
